# Surface-Cutting

./: .gitignore  Example.md  README.md  example_surface.byu  surfacetrackercut.cmake  vtkCurvatures1-archived.h
Archive/: CMakeLists-Curvature.txt  CMakeLists-STMS.txt  CMakeLists-STTE.txt  README.md
Archive/SurfaceCut-ConnectedComponents/: surfaceCut.cxx  surfaceCut.h
Archive/SurfaceCut-ImplicitSelectionLoop/: surfaceCut.cxx  surfaceCut.h
BW_CODE_REVIEW/: BW_Curvature.txt  BW_Surface_Cut.txt
BW_CODE_REVIEW_CURV/: BW_Curvature.txt  BW_Curvature_Types.txt
CombinedPlugin/: CMakeLists.txt
CombinedPlugin/Plugin/Filter/: CMakeLists.txt  surfaceCut.cxx  vtkMyDGGP.h
Curvature/: CMakeLists.txt  myCurvature.cxx  myCurvature.h  myCurvature.xml  vtkCurvatures1.cxx  vtkCurvatures1.h  vtkCurvatures1.xml
Curvature/ADL/: LaBalance.h  LaCond.h  LaLU.h  LaNorm.h  LaSVD.h  Lapack.h
Curvature/Plugin/: CMakeLists.txt  paraview.plugin
Curvature/Plugin/Filter/: CMakeLists.txt  vtk.module
Everything/Plugin/: CMakeLists.txt  paraview.plugin
Everything/Plugin/Filter/: surfaceCut.h  vtk.module
Examples/: Example.md
ParaView/: CMakeLists.txt
ParaView/Plugin/: CMakeLists.txt  paraview.plugin
ParaView/Plugin/SurfaceCutFilter/: CMakeLists.txt
ParaView/Plugin/SurfaceCutFilter/Plugin/: paraview.plugin
ParaView/Plugin/SurfaceCutFilter/Plugin/Filter/: CMakeLists.txt  surfaceCut.cxx  surfaceCut.xml  vtk.module
ParaView/Plugin/SurfaceTrackerManualFilter/Plugin/: CMakeLists.txt
ParaView/Plugin/SurfaceTrackerManualFilter/Plugin/Filter/: vtk.module  vtkMyDGGP.cxx
ParaView/Plugin/SurfaceTrackerTextFilter/Plugin/: CMakeLists.txt  paraview.plugin
ParaView/Plugin/myCurvatureFilter/Plugin/: CMakeLists.txt
PythonScripts/: HowToUse.md  README.md  SurfaceCut.py  SurfaceTracker-Multiple.py  SurfaceTracker-One.py  SurfaceTracker-Three.py
ReaderXMLOnly/: plugin.cmake
SurfaceCut-BoundaryFill/: CMakeLists.txt  surfaceCut.cxx  surfaceCut.h  surfaceCut.xml
SurfaceCut-BoundaryFill/Plugin/: CMakeLists.txt  paraview.plugin
SurfaceCut-BoundaryFill/Plugin/Filter/: CMakeLists.txt  surfaceCut.cxx  surfaceCut.h  vtk.module
SurfaceCut-ConnectedComponents/: CMakeLists.txt  surfaceCut.cxx
SurfaceCut-ImplicitSelectionLoop/: surfaceCut.cxx  surfaceCut.xml
SurfaceTracker-ManualSelection/: CMakeLists.txt  vtkCurvatures1.h  vtkDijkstraGraphGeodesicPath1.cxx  vtkMyDGGP.cxx  vtkMyDGGP.h  vtkMyDGGP.xml
SurfaceTracker-ManualSelection/Plugin/: CMakeLists.txt  paraview.plugin
SurfaceTracker-ManualSelection/Plugin/Filter/: CMakeLists.txt  vtk.module  vtkDijkstraGraphGeodesicPath1.h  vtkMyDGGP.cxx  vtkMyDGGP.h
SurfaceTracker-TextEntry/: CMakeLists.txt  vtkCurvatures1.cxx  vtkCurvatures1.h  vtkDijkstraGraphGeodesicPath1.cxx  vtkDijkstraGraphGeodesicPath1.h  vtkDijkstraGraphGeodesicPath1.xml
SurfaceTracker-TextEntry/ADL/: ADL_globals.h  LaInv.h  LaLinEqn.h
SurfaceTracker-TextEntry/Filter/: CMakeLists.txt  vtk.module  vtkCurvatures1.h
SurfaceTracker-TextEntry/Plugin/: CMakeLists.txt  paraview.plugin
SurfaceTracker-TextEntry/Plugin/Filter/: CMakeLists.txt  vtk.module  vtkCurvatures1.cxx  vtkDijkstraGraphGeodesicPath1.cxx  vtkDijkstraGraphGeodesicPath1.h
SurfaceTrackerCut/: CMakeLists.txt
SurfaceTrackerCut/Plugin/: CMakeLists.txt  paraview.plugin
SurfaceTrackerCut/Plugin/Filter/: CMakeLists.txt  surfaceCut.h
SurfaceTrackerCut/Plugin/Filters/: CMakeLists.txt  vtk.module  vtkCurvatures1.cxx  vtkMyDGGP.cxx
